css/slides.css
/* ... */
.pointer-events {
  pointer-events: all !important;
}

.disable-pointer-events {
  pointer-events: none !important;
}

.space {
  padding: 0 20px;
}

.pointer,
.cursorPointer {
  cursor: pointer;
}

.cursorZoomIn, [data-action="zoom"] {
  cursor: pointer;
  cursor: -webkit-zoom-in !important;
}

.cursorZoomOut, .zoom-img img.zoom-img,
.zoom-img-wrap img.zoom-img {
  cursor: pointer;
  cursor: -webkit-zoom-out !important;
}

.cursorGrab {
  cursor: move;
  cursor: grab !important;
  cursor: -webkit-grab !important;
}

.cursorGrab:active {
  cursor: grabbing !important;
  cursor: -webkit-grabbing !important;
}

.pattern .background {
  background-repeat: repeat;
  background-size: auto;
}

.attachment-fixed {
  background-attachment: fixed !important;
  background-size: cover !important;
}

.disableClick {
  pointer-events: none;
}

.cover {
  background-size: cover !important;
}

.noSelect, .noSelect *, .disableSelect, .disableSelect * {
  -webkit-touch-callout: none !important;
  -webkit-user-select: none !important;
     -moz-user-select: none !important;
      -ms-user-select: none !important;
          user-select: none !important;
}

.selectable, .selectable *, .enableSelect, .enableSelect * {
  -webkit-touch-callout: auto !important;
  -webkit-user-select: auto !important;
     -moz-user-select: auto !important;
      -ms-user-select: auto !important;
          user-select: auto !important;
}

.clearBoth:after {
  content: "";
  clear: both;
  display: table;
}

/*# sourceMappingURL=slides.css.map */

#background_1 { background-image: url(../assets/img/background/img-09.jpg); }
#background_2 { background-image: url(../assets/img/background/img-15.jpg); }

@media screen and (max-width: 400px) {
    #background_1 { background-image: url(../assets/img/background/img-09_m.jpg); }
    #background_2 { background-image: url(../assets/img/background/img-15_m.jpg); }
}

